# pysteam

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.docker/: DockerfileClient  DockerfileDashboard  DockerfileServer  DockerfileWorker
client/: package.json
client/src/: App.js
client/src/components/: ClientNavBar.js  SteamApp.js  SteamAppInfo.js  SteamApps.js
client/src/components/pages/: HomePage.js
server/: alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  services.py  settings.py  steamcmd.py  worker.py
server/alembic/: env.py
server/alembic/versions/: 01c9dae0f6c7_.py  1ffdc1717497_.py  25a441086bfb_.py  32e399a24120_.py  453bcfb0616f_.py  47772eebc191_.py  68aae8f9201c_.py
