[tool.poetry]
name = "pysteam"
version = "0.1.0"
description = ""
authors = ["Oli Jacobs <skyshardy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.75.1"
SQLAlchemy = "^1.4.35"
requests = "^2.27.1"
py-steamcmd-wrapper = "^1.1.1"
vdf = "^3.4"
celery = "^5.2.6"
uvicorn = "^0.17.6"
redis = "^4.2.2"
flower = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
